# dcache_cp

./: README.md  pyproject.toml
src/dcache_cp/: __init__.py  cli.py  ls.py  mv.py
